# manzar

./: Cargo.toml  LICENSE.md  README.md  index.html  minified.wasm  test.sh
src/: lib.rs
