[package]
name = "manzar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.91"


[dependencies.web-sys]
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'MouseEvent',
  "console"
]

[lib]
crate-type = ["cdylib"]

