[package]
name = "manzar"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.91"

[dependencies.web-sys]
version = "0.3.77"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'MouseEvent',
  "console"
]

[lib]
crate-type = ["cdylib"]


[profile.release]
lto = true
opt-level = 'z'
