[package]
name = "manzar"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.91"

[dependencies.web-sys]
version = "0.3.77"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'MouseEvent',
]

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz', '--all-features' ]


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
strip = true
